--- a/hapi_demo.ipynb
+++ b/hapi_demo.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/javascript": [
        "// Notebook style configuration\n",
-       "require.config({paths: {toc: \"//rawgit.com/rweigel/js-rsw/master/jupyter/toc\"}});require([\"toc\"]);$('pre').css('white-space','pre');"
+       "require.config({paths: {toc: \"//rawgit.com/rweigel/js-rsw/master/jupyter/toc\"}});require([\"toc\"]);"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -22,7 +22,7 @@
    "source": [
     "%%javascript \n",
     "// Notebook style configuration\n",
-    "require.config({paths: {toc: \"//rawgit.com/rweigel/js-rsw/master/jupyter/toc\"}});require([\"toc\"]);$('pre').css('white-space','pre');"
+    "require.config({paths: {toc: \"//rawgit.com/rweigel/js-rsw/master/jupyter/toc\"}});require([\"toc\"]);"
    ]
   },
   {
@@ -38,7 +38,7 @@
     "1. [Install Anaconda](https://www.anaconda.com/download/) for Python 3\n",
     "2. On command line enter \n",
     "\n",
-    "```\n",
+    "```bash\n",
     "pip install hapiclient # Install hapiclient package\n",
     "curl -L -O https://rawgithub.com/hapi-server/client-python/master/hapi_demo.ipynb\n",
     "jupyter-notebook hapi_demo.ipynb # Launches browser window\n",
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -73,7 +73,7 @@
       "    For additional documentation and demonstration, see\n",
       "    https://github.com/hapi-server/client-python/blob/master/hapi_demo.ipynb\n",
       "    \n",
-      "    Version: 0.0.5\n",
+      "    Version: 0.0.6\n",
       "    \n",
       "    Parameters\n",
       "    ----------\n",
@@ -151,14 +151,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running hapi.py version 0.0.5\n",
+      "Running hapi.py version 0.0.6\n",
       "Downloading http://hapi-server.org/servers/SSCWeb/hapi/info?id=ace&parameters=X_GSE,Y_GSE,Z_GSE ... Done.\n",
       "Writing /Users/robertweigel/git/client-python/hapi-data/hapi-server.org_servers_SSCWeb_hapi/ace_X_GSEY_GSEZ_GSE.json ... Done.\n",
       "Saving http://hapi-server.org/servers/SSCWeb/hapi/data?id=ace&parameters=X_GSE,Y_GSE,Z_GSE&time.min=2001-01-01T05:00:00&time.max=2001-01-01T06:00:00&format=binary ... Done.\n",
@@ -222,14 +222,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running hapi.py version 0.0.5\n",
+      "Running hapi.py version 0.0.6\n",
       "Reading /Users/robertweigel/git/client-python/hapi-data/cdaweb.gsfc.nasa.gov_hapi/AC_H0_MFI_MagnitudeBGSEc.pkl ... Done.\n",
       "Reading /Users/robertweigel/git/client-python/hapi-data/cdaweb.gsfc.nasa.gov_hapi/AC_H0_MFI_Magnitude-BGSEc_20010101T050000_20010101T060000.npy ... Done.\n"
      ]
