--- a/hapi_demo.ipynb
+++ b/hapi_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,7 @@
        "      dtype=[('Time', 'S24'), ('scalar', '<f8'), ('vector', '<f8', (3,))])"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -366,7 +366,7 @@
        "(b'1970-01-01T00:00:00.000Z', 0., [ 0.        , -0.70710678, -1.        ])"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -398,7 +398,7 @@
        "      dtype='|S24')"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +434,7 @@
        "       [ 0.04710645, -0.67301251, -0.99888987]])"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
        "array([ 0.00523596, -0.7033947 , -0.99998629])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +488,7 @@
        "-0.7033947028105039"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -540,7 +540,7 @@
        "      dtype='|S24')"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
        "       datetime.datetime(1970, 1, 1, 0, 0, 9)], dtype=object)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
        "      dtype=[('Time', 'S24'), ('vector', '<f8', (3,))])"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -644,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +655,7 @@
        "      dtype=[('Time', 'S24'), ('matrix', '<f8', (3, 3))])"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
        "      dtype=[('Time', 'S24'), ('vector', '<f8', (3,)), ('matrix', '<f8', (3, 3))])"
       ]
      },
-     "execution_count": 134,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -785,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -794,7 +794,7 @@
        "Text(0.5,1,'scalar with Time as datetimes')"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -845,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -983,16 +983,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x11c11c9b0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x121a92080>"
       ]
      },
-     "execution_count": 140,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1036,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2117,7 +2117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2194,7 +2194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2224,7 +2224,7 @@
        " 'x_dataset': 'AC_H0_MFI',\n",
        " 'x_parameters': 'Magnitude,BGSEc',\n",
        " 'x_metaFile': '/Users/robertweigel/git/client-python/hapi-data/cdaweb.gsfc.nasa.gov_hapi/AC_H0_MFI_MagnitudeBGSEc.json',\n",
-       " 'x_requestDate': '2018-10-04T09:52:27',\n",
+       " 'x_requestDate': '2018-10-05T09:25:11',\n",
        " 'x_cacheDir': '/Users/robertweigel/git/client-python/hapi-data/cdaweb.gsfc.nasa.gov_hapi'}"
       ]
      },
