--- a/hapi_demo.ipynb
+++ b/hapi_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -20,17 +20,18 @@
     }
    ],
    "source": [
-    "%%javascript \n",
+    "%%javascript\n",
     "// Notebook style configuration\n",
     "require.config({paths: {toc: \"//rawgit.com/rweigel/js-rsw/master/jupyter/toc\"}});require([\"toc\"]);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Notebook plot style configuration\n",
     "%config InlineBackend.figure_format = 'svg'"
    ]
   },
